--- a/gb/20/8/28/n12363825.md
+++ b/gb/20/8/28/n12363825.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/prbhig3047/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/prbhig3047/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/prbhig3047/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/prbhig3047/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/prbhig3047/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/prbhig3047/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/prbhig3047/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/prbhig3047/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/prbhig3047/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/prbhig3047/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/prbhig3047/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/prbhig3047/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/prbhig3047/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/prbhig3047/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/prbhig3047/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/prbhig3047/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/prbhig3047/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/prbhig3047/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/prbhig3047/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/prbhig3047/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/prbhig3047/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/prbhig3047/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/prbhig3047/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/prbhig3047/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>学习策略：如何掌握自己的学习</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/Fotolia_110105198_Subscription_L-600x400.jpg" />
 <h6>知识赋予人力量，要想学习各种知识，您就需要掌握学习策略。（Fotolia）
 </h6>
 <hr>
-<p>【大纪元2020年08月28日讯】（大纪元记者李路明澳洲悉尼编译报导）您是否感到自己对<ahref="https://github.com/prbhig3047/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>有支配权？不论老师的好坏，您都能学得好吗？在当今信息化时代，我们有更多的机会了解任何已有的知识和信息。通过网络就可以学习您想学的各种知识，知识赋予人力量。要想学习各种知识，您就需要掌握<ahref="https://github.com/prbhig3047/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E7%AD%96%E7%95%A5.md#1">学习策略</a>，可能您已经了解一些合理的<ahref="https://github.com/prbhig3047/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%8A%80%E5%B7%A7.md#1">学习技巧</a>和建议，但是有没有认真思考过它们？如何把这些学习策略牢记在心，而不是搁置一旁？</p>
-<p>思考<ahref="https://github.com/prbhig3047/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>策略的一种方式，是从“自律式学习”（SRL）的角度出发。自律式学习是一种了解学习技能的科学方法。其观点是，学习者倾向于对自己的认知、动机、行为和学习环境的某些部分进行计划、监视和控制。在这些方面掌握了<ahref="https://github.com/prbhig3047/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E7%AD%96%E7%95%A5.md#1">学习策略</a>的人，可以完全掌控自己的学习。</p>
+<p>【大纪元2020年08月28日讯】（大纪元记者李路明澳洲悉尼编译报导）您是否感到自己对<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>有支配权？不论老师的好坏，您都能学得好吗？在当今信息化时代，我们有更多的机会了解任何已有的知识和信息。通过网络就可以学习您想学的各种知识，知识赋予人力量。要想学习各种知识，您就需要掌握<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E7%AD%96%E7%95%A5.md#1">学习策略</a>，可能您已经了解一些合理的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%8A%80%E5%B7%A7.md#1">学习技巧</a>和建议，但是有没有认真思考过它们？如何把这些学习策略牢记在心，而不是搁置一旁？</p>
+<p>思考<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>策略的一种方式，是从“自律式学习”（SRL）的角度出发。自律式学习是一种了解学习技能的科学方法。其观点是，学习者倾向于对自己的认知、动机、行为和学习环境的某些部分进行计划、监视和控制。在这些方面掌握了<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E7%AD%96%E7%95%A5.md#1">学习策略</a>的人，可以完全掌控自己的学习。</p>
 <p>密歇根大学的Paul Pintrich对自律式学习的关键阶段进行了概述，用以帮助组织和扩展学习策略。他在《教育心理学评论》中发表了有关自我调节学习框架的论文。下面描述一下这些阶段，并列举一些学习策略的例子。</p>
 <h2>学习策略：认知</h2>
 <p>第一阶段，是学习者可以用来计划、监视和控制其认知的策略。我的观点（也许有些偏颇）是，认知是所有类型的学习策略的核心部分。规划包括设定学习目标。</p>
@@ -27,7 +27,7 @@
 <h2>学习策略：行为与环境</h2>
 <p>您可以计划、监视和控制自己的行为和状况，以增强学习效果。就如您为认知和动机所进行的努力一样。安排时间是影响自己行为的一种方式。时间管理包括制定学习时间表，为不同的学习活动留出时间。考试、测验和成绩是我们监控学习的行为方式。如果您是自学，那么尝试向他人解释您的新知识，这种行为将使您知道自己对知识的实际掌握情况。</p>
 <p>用来掌控学习的一种行为策略是寻求帮助。会学习的人知道何时、为什么以及从谁那里寻求帮助。胆大一些，在需要时就去获取帮助。假如您注意到学习空间充满了干扰，例如音乐、电视、喋喋不休说话的朋友。您可以尝试消除这些干扰。您还可以提前计划在某个特定场所学习。</p>
-<p>掌控您的学习环境并不意味着总是需要独自学习。与学习小组中的朋友一起学习也许更能相互促进。学习有时看似很困难，但是您能做出一些改变。您可以通过发展更好的学习策略来提高学习能力。我开设了<ahref="https://github.com/prbhig3047/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%8A%80%E5%B7%A7.md#1">学习技巧</a>课程，以帮助人们运用这些技巧。</p>
+<p>掌控您的学习环境并不意味着总是需要独自学习。与学习小组中的朋友一起学习也许更能相互促进。学习有时看似很困难，但是您能做出一些改变。您可以通过发展更好的学习策略来提高学习能力。我开设了<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%8A%80%E5%B7%A7.md#1">学习技巧</a>课程，以帮助人们运用这些技巧。</p>
 <p>一些策略可以帮助您更轻松地吸收很难的东西。一些策略帮助您保持学习积极性。最后就是改变您的学习环境。请牢记这三种学习策略，并把它们应用到您平时的学习生活中，了解它们如何工作，以及掌控您的学习策略。</p>
 <p>责任编辑：瑞木悦</p>
 <p>&nbsp;</p>
@@ -36,48 +36,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/4/6/n12006625.md#1">五大实用策略 激励孩子学习兴趣</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/4/26/n12062614.md#1">成就顶尖人才 要的不只是名牌大学</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/7/15/n12257175.md#1">如何阅读学术文章？</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/7/30/n12294154.md#1">大学生如何保持对学习的热情和效率</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/7/30/n12294343.md#1">多项选择题考试学习策略</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/7/n12313719.md#1">如何有效利用网络资源学习</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/14/n12330812.md#1">五个技巧为学习加速</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/20/n12344251.md#1">研究证实的六项学习技巧</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/28/n12363797.md#1">发现你的学习方式：分析型学习者</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/27/n12360986.md#1">新州拟改公校惩罚政策 最长停课时间减半</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/4/6/n12006625.md#1">五大实用策略 激励孩子学习兴趣</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/4/26/n12062614.md#1">成就顶尖人才 要的不只是名牌大学</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/15/n12257175.md#1">如何阅读学术文章？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/30/n12294154.md#1">大学生如何保持对学习的热情和效率</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/30/n12294343.md#1">多项选择题考试学习策略</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/7/n12313719.md#1">如何有效利用网络资源学习</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/14/n12330812.md#1">五个技巧为学习加速</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/20/n12344251.md#1">研究证实的六项学习技巧</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13609689.md#1">昆州增加幼托行业拨款 4万儿童受益</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604124.md#1">可在家进行的儿童趣味学习活动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/16/n10147874.md#1" target="_blank">“一打三反”运动：文革中血腥的一幕</a></li><li><a href="https://github.com/prbhig3047/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494502.md#1" target="_blank">探寻东方养生道 希腊青年在修炼中得到升华</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/12/n10556515.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/22/n11273218.md#1" target="_blank">用实际行动赎罪 派出所所长胃癌痊愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/24/n12353266.md#1">疫情中返台居家隔离日记（上）</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/6/29/n12218273.md#1">违背原著的宝玉出家</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/24/n12353478.md#1">以色列培育红母牛 为《圣经》末日预言准备</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/24/n12353033.md#1">日本神秘湖泊“龙之眼” 演绎龙的传说</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/21/n12347600.md#1">七夕有哪些古风情？考古发现源流久远</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/27/n12362222.md#1">【珍言真语】林匡正：跳出中共圈套 争取选举</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/28/n12362954.md#1">【拍案惊奇】港人逃台被截送中 李克强靠边站？</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/27/n12362636.md#1">【新闻看点】美日印澳结盟反共 北京4招难脱困</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/26/n12357980.md#1">【西岸观察】最准预测称川普胜算91%</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/26/n12359264.md#1">【薇羽看世间】北戴河习妥协 习胡再度联手？</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/26/n12358137.md#1">习近平座谈会九经济智囊曝光 李克强被边缘化</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/25/n12357141.md#1">65岁张国立被搀扶拍戏 传遭吸毒家暴儿害惨</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/27/n12362745.md#1">台湾网红馆长陈之汉遭枪击 鲜血直流紧急送医</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/26/n12359533.md#1">新剧造型曝光获称小章子怡 童瑶高情商回应</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/25/n12356940.md#1">逃税风波过去两年 范冰冰获首个全球代言</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/27/n12362251.md#1">赞台湾民主自由 中国网红微博账号遭永久删除</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/25/n12356691.md#1">膝关节疼痛不敢动？单脚摆10下甩掉膝盖痛</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/26/n12359296.md#1">每天2个动作 让膝盖变年轻！躺着就能做</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/26/n12357981.md#1">为什么美国机场偏好耳朵下垂的工作犬？</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/25/n12355835.md#1">F-35战机空投多枚小直径炸弹 命中率100%</a></li>
-<li><a href="https://github.com/prbhig3047/djy/blob/master/gb/20/8/26/n12359464.md#1">胃癌大多是吃出来的！少碰3种食物 不让癌上身</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/prbhig3047/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/prbhig3047/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/28/n12363825.htm">学习策略：如何掌握自己的学习</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/28/n12363825.htm">学习策略：如何掌握自己的学习</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/prbhig3047/djy/blob/master/gb/20/8/28/n12363825.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/prbhig3047/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/prbhig3047/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/prbhig3047/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/prbhig3047/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/prbhig3047/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/28/n12363825.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
